--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,1 @@
-attrs==19.3.0
-awsebcli==3.18.1
-backports.functools-lru-cache==1.6.1
-backports.shutil-get-terminal-size==1.0.0
-backports.ssl-match-hostname==3.7.0.1
-bcrypt==3.1.7
-blessed==1.17.8
-botocore==1.15.49
-cached-property==1.5.1
-cement==2.8.2
-certifi==2020.6.20
-cffi==1.14.0
-chardet==3.0.4
-click==7.1.2
-colorama==0.4.3
-configparser==4.0.2
-contextlib2==0.6.0.post1
-cryptography==2.9.2
-cycler==0.10.0
-decorator==4.4.2
-docker==4.2.2
-docker-compose==1.25.5
-dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.15.2
-enum34==1.1.10
-Flask==1.1.2
-functools32==3.2.3.post2
-future==0.16.0
-idna==2.7
-importlib-metadata==1.7.0
-install==1.3.0
-ipaddress==1.0.23
-itsdangerous==1.1.0
-Jinja2==2.11.2
-jmespath==0.10.0
-jsonschema==3.2.0
-kiwisolver==1.1.0
-lxml==4.5.2
-MarkupSafe==1.1.1
-matplotlib==2.2.5
-mpld3==0.5.1
-numpy==1.16.6
-obspy==1.2.2
-pandas==0.24.2
-paramiko==2.7.1
-pathlib2==2.3.5
-pathspec==0.5.9
-pycparser==2.20
-pycryptodome==3.9.8
-PyNaCl==1.4.0
-pyparsing==2.4.7
-pyrsistent==0.16.0
-python-dateutil==2.8.0
-pytz==2020.1
-PyYAML==5.3.1
-requests==2.20.1
-scandir==1.10.0
-scipy==1.2.3
-semantic-version==2.5.0
-six==1.11.0
-SQLAlchemy==1.3.18
-subprocess32==3.5.4
-termcolor==1.1.0
-texttable==1.6.2
-urllib3==1.24.3
-wcwidth==0.1.9
-websocket-client==0.57.0
-Werkzeug==1.0.1
-zipp==1.2.0
+Flask
